<resources>
    <string name="package_name">com.scalability4all.sathi</string>
    <string name="app_name">Sathi</string>
    <string name="sign_up">Sign Up</string>
    <string name="xmpp_host">34.93.240.242</string>
    <string name="prompt_jid">Jabber ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">registration</string>
    <string name="error_invalid_jid">JabberId invalid</string>
    <string name="error_invalid_password">Password too short</string>
    <string name="error_incorrect_password">Wrong password</string>
    <string name="error_incorrect_gmail">Wrong Email Id</string>
    <string name="error_field_required">This field is required</string>
    <string name="username_taken">Username is already taken</string>
    <string name="permission_rationale">Contact permissions are required to use auto-completion.</string>
    <string name="user_example_com">user@example.com</string>
    <string name="passwords_not_matching">Passwords do not match</string>
    <string name="domain">localhost</string>
    <string name="server_text">user@server.com</string>
    <string name="last_message">Last known message ...</string>
    <string name="send_message">Send Message</string>
    <string name="title_activity_contact_list">Select contact</string>
    <string name="add_contact_label_text">Username</string>
    <string name="add_contact_confirm_text">OK</string>
    <string name="add_contact_cancel_text">Abort</string>
    <string name="me">My Profile</string>
    <string name="title_me_activity">My Profile</string>
    <string name="ignore_bat_allow">Allow</string>
    <string name="delete_contact">delete contact</string>
    <string name="contact_details">Contact details</string>
    <string name="delete_chat">Delete chat</string>
    <string name="delete_message">delete message</string>
    <string name="contact_details_chat_view">Contact details</string>
    <string name="login_register_dialog_title">Create a new user</string>
    <string name="notregistered">Registration could not be completed</string>
    <string name="registered">Registration completed</string>
    <string name="chatListTitle">Chats</string>
    <string name="contactListTitle">Contacts</string>
    <string name="snackbar_status_text">Allow online status subscription?</string>
    <string name="snackbar_status_deny">Refuse</string>
    <string name="snackbar_status_allow">Allow</string>
    <string name="snackbar_contact_text">Allow Contact Request?</string>
    <string name="snackbar_contact_allow">Allow</string>
    <string name="snackbar_contact_deny">Refuse</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="groupchat">Join group chat</string>
    <string name="chatname">Group Name</string>
    <string name="creategroup">Create</string>
    <string name="groupchat_members">Members</string>
    <string name="preference">Preferences</string>
    <string name="language">Language</string>
    <string name="category">Category</string>
    <string name="choose_language">Select Language</string>
    <string name="category_choose_stmt">Select News Categories</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hint_user_name">User Name</string>
    <string name="login">Login</string>
<!--    <string-array name="languages">-->
<!--        <item>English</item>-->
<!--        <item>Hindi</item>-->
<!--        <item>Telugu</item>-->
<!--    </string-array>-->
<!--    <string-array name="news_category">-->
<!--        <item>Business</item>-->
<!--        <item>Politics</item>-->
<!--        <item>Education</item>-->
<!--        <item>Fashion</item>-->
<!--        <item>Entertainment</item>-->
<!--    </string-array>-->
    <string name="whatsapp_dialog_message">is not using Zing. Do you want to send the message on Whatsapp?</string>
</resources>