<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="90dp"

    android:layout_marginBottom="2dp"
    android:background="#f0f0f0">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/profile"
        android:layout_width="72dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_profile"
        app:riv_border_color="@color/riv_border_color"
        app:riv_border_width="1dip"
        app:riv_corner_radius="52dp" />

    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/message_body"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_toRightOf="@id/profile">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_jid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user_example_com"
                android:textColor="@color/default_bubble_color_rcv"
                android:textSize="@dimen/default_message_chat_text_size"
                tools:text="@string/server_text" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <TextView
                android:id="@+id/message_abstract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_message" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <TextView
                android:id="@+id/text_message_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/chat_right_margin"
                android:textColor="@color/default_tstamp_color_send"
                android:textSize="@dimen/default_timestamp_text_size"
                tools:text="12:10 am" />

        </LinearLayout>


    </FrameLayout>


</RelativeLayout>